test/org/midica/testfiles/failing/var-without-dollar.midica
INCLUDE inc/instruments.midica

VAR x = c


0  c  /4
